--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Interactive Widget with Animation Controls</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="webframes.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
@@ -32,6 +32,6 @@
     </div>
 </div>
 
-<script src="scripts.js"></script>
+<script src="webframes.js"></script>
 </body>
 </html>
